--- a/ark/style.css
+++ b/ark/style.css
@@ -30275,11 +30275,11 @@ header.ark-header .ff-font-zocial[class*=icon]:before { font-family: 'ff-font-zo
 /* Navbar Logo */
 .header-center-aligned-transparent .navbar-logo {
 	position: absolute;
-	left: 50%;
+	/*left: 50%;*/
 	width: 100%;
 	height: 85px;
 	text-align: center;
-	float: left;
+	float: right;
 	max-height: 90px;
 	line-height: 60px;
 	-webkit-transform: translate3d(-50%, 0, 0);
